# oosc-rs

./: .gitignore  Cargo.toml  README.md
oosc-core/: Cargo.toml
oosc-core/src/: error.rs  lib.rs
oosc-core/src/callbacks/: mod.rs  stream_callback.rs  stream_renderer.rs
oosc-core/src/core/: lfo.rs  mod.rs  note.rs  oscillator.rs  parameter.rs  parametrs.rs  synthesizer.rs  time_tick.rs  waveshape.rs  wavetable.rs
oosc-core/src/effects/: amplifier.rs  chorus.rs  compressor.rs  delay.rs  effect.rs  filter.rs  mod.rs  sample_detector.rs
oosc-core/src/iir/: coefficients.rs  mod.rs
oosc-ui/: Cargo.toml
oosc-ui/src/: main.rs
oosc-ui/src/app/: application.rs  config.rs  context.rs  mod.rs  stream_callback.rs
oosc-ui/src/ui/: mod.rs  observer.rs  renderer.rs  utils.rs
oosc-ui/src/ui/components/: bezier.rs  components_container.rs  effect.rs  effects_container.rs  envelope.rs  keyboard.rs  menu_bar.rs  mod.rs  oscillator.rs  parameter.rs  parametr.rs  record.rs  root.rs  synthesizer.rs  wavetable.rs
oosc-ui/src/ui/widgets/: bar.rs  mod.rs  oscillator.rs  wavetable.rs
src/: error.rs  main.rs
src/app/: application.rs  config.rs  context.rs  mod.rs  stream_callback.rs
src/core/: amplifier.rs  dca.rs  mod.rs  note.rs  oscillator.rs  parametrs.rs  synthesizer.rs  time_tick.rs  waveshape.rs  wavetable.rs
src/effects/: effect.rs
src/midi/: mediator.rs  mod.rs  playback.rs  smf_extensions.rs
src/utils/: adsr_envelope.rs  audio_buffer.rs  consts.rs  cubic_bezier.rs  evaluate.rs  interpolation.rs  mod.rs  sample_buffer.rs  waveshape.rs
(+16 files in other folders)
