[package]
name = "oosc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
assert_approx_eq = "1.1.0"
rayon = "1.8.0"
cpal = "0.15.2"
hound = "3.5.1"
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0.75"
